--- a/flodjishare.css
+++ b/flodjishare.css
@@ -91,6 +91,12 @@ background-color: #2c4762;
 .fswa{
 background-color: #33CC66;
 }
+.fspo{
+background-color: #f03e56;
+}
+.fsfe{
+background-color: #00bc04;
+}
 .fsprivacy{
 display: block;
 text-align: left;
