--- a/flodjishare.css
+++ b/flodjishare.css
@@ -36,7 +36,7 @@ min-width:20px;
 background-color: #000;
 color: #fff;
 display: inline-block;
-font-size: 1.5em;
+font-size: 1.5rem;
 padding: 20px 0px;
 text-align: center;
 text-decoration:none;
@@ -59,7 +59,7 @@ line-height:1,5;
 .fsflat{
 color: #fff;
 display: inline-block;
-font-size: 1.5em;
+font-size: 1.5rem;
 padding: 20px 20px;
 text-align: center;
 min-width: 140px;
